<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place-its</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="textViewCreatedOn">Created On</string>
    <string name="EditPlaceItTitle">Title</string>
    <string name="textViewOccurence">Repeating</string>
    <string name="textViewNotes">Notes</string>
    <string name="textViewAddNotes">Notes</string>
    <string name="buttonSubmit">Place it</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSun">S</string>
    <string name="buttonMon">M</string>
    <string name="buttonTue">T</string>
    <string name="buttonWed">W</string>
    <string name="buttonFri">F</string>
    <string name="title_activity_recurring_placeit">RecurringPlaceitActivity</string>
    <string name="radioWeekly">Weekly</string>
    <string name="radioDaily">Daily</string>
    <string name="radioTest">10 Seconds</string>
    <string name="buttonOk">OK</string>
    <string name="action_new">New Place-it</string>
    <string name="action_map">View map</string>
    <string name="action_list">View list</string>
    <string name="todo">MARK AS TO DO</string>
    <string name="inprogress">MARK AS IN PROGRESS</string>
    <string name="completed">MARK AS COMPLETED</string>
    <string name="snooze">SNOOZE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>

</resources>
