<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="200"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radioButtonWeekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/radioWeekly"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" >

                    <ToggleButton
                        android:id="@+id/buttonSun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonSun"
                        android:textOn="@string/buttonSun" />

                    <ToggleButton
                        android:id="@+id/buttonMon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonMon"
                        android:textOn="@string/buttonMon" />

                    <ToggleButton
                        android:id="@+id/buttonTue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonTue"
                        android:textOn="@string/buttonTue" />

                    <ToggleButton
                        android:id="@+id/buttonWed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonWed"
                        android:textOn="@string/buttonWed" />

                    <ToggleButton
                        android:id="@+id/buttonThurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonTue"
                        android:textOn="@string/buttonTue" />

                    <ToggleButton
                        android:id="@+id/buttonFri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonFri"
                        android:textOn="@string/buttonFri" />

                    <ToggleButton
                        android:id="@+id/buttonSat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minWidth="20dp"
                        android:textOff="@string/buttonSun"
                        android:textOn="@string/buttonSun" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <RadioButton
            android:id="@+id/radioButtonDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/radioDaily"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButtonTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:text="@string/radioTest"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/buttonRecurringOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/buttonOk" />

        <Button
            android:id="@+id/buttonRecurringCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/buttonCancel" />
    </LinearLayout>

</LinearLayout>